tree-sitter-alexandrite/test/corpus/expressions.txt
==================
Command calls and minus
==================

puts -x
a - b
a -b
puts ^0
assert x > 0, "why"
puts (1 + 2) * 3
puts [1, 2]

---

(source_file
  (expression_statement
    (command_call
      (identifier)
      (command_argument_list
        (unary_expression
          (identifier)))))
  (expression_statement
    (binary_expression
      (identifier)
      (identifier)))
  (expression_statement
    (command_call
      (identifier)
      (command_argument_list
        (unary_expression
          (identifier)))))
  (expression_statement
    (command_call
      (identifier)
      (command_argument_list
        (unary_expression
          (integer)))))
  (expression_statement
    (command_call
      (identifier)
      (command_argument_list
        (binary_expression
          (identifier)
          (integer))
        (string
          (string_content)))))
  (expression_statement
    (command_call
      (identifier)
      (command_argument_list
        (binary_expression
          (parenthesized_expression
            (binary_expression
              (integer)
              (integer)))
          (integer)))))
  (expression_statement
    (command_call
      (identifier)
      (command_argument_list
        (array_literal
          (integer)
          (integer))))))

==================
Calls, members and blocks
==================

xs.map { it * 2 }.select { |v| v > 2 }
m2 = obj.~method(1)
n = ~parse("x")
c = opt?.field
mu.lock { |v| v += 1 }
xs.each_slice(2) { |a| p a }
f(level: 2, next: n, fail: 3, error: e)
xs.map(&:to_s)

---

(source_file
  (expression_statement
    (call_expression
      (member_expression
        (call_expression
          (member_expression
            (identifier)
            (identifier))
          (block
            (expression_statement
              (binary_expression
                (identifier)
                (integer)))))
        (identifier))
      (block
        (block_parameters
          (identifier))
        (expression_statement
          (binary_expression
            (identifier)
            (integer))))))
  (expression_statement
    (assignment_expression
      (identifier)
      (call_expression
        (member_expression
          (identifier)
          (identifier))
        (argument_list
          (integer)))))
  (expression_statement
    (assignment_expression
      (identifier)
      (unary_expression
        (call_expression
          (identifier)
          (argument_list
            (string
              (string_content)))))))
  (expression_statement
    (assignment_expression
      (identifier)
      (member_expression
        (identifier)
        (identifier))))
  (expression_statement
    (call_expression
      (member_expression
        (identifier)
        (identifier))
      (block
        (block_parameters
          (identifier))
        (expression_statement
          (assignment_expression
            (identifier)
            (integer))))))
  (expression_statement
    (call_expression
      (member_expression
        (identifier)
        (identifier))
      (argument_list
        (integer))
      (block
        (block_parameters
          (identifier))
        (expression_statement
          (command_call
            (identifier)
            (command_argument_list
              (identifier)))))))
  (expression_statement
    (call_expression
      (identifier)
      (argument_list
        (keyword_argument
          (identifier)
          (integer))
        (keyword_argument
          (identifier)
          (identifier))
        (keyword_argument
          (identifier)
          (integer))
        (keyword_argument
          (identifier)
          (identifier)))))
  (expression_statement
    (call_expression
      (member_expression
        (identifier)
        (identifier))
      (argument_list
        (block_symbol)))))

==================
Block calls inside operators and conditions
==================

ok = st.lock { |s| s.n } < size
bad = !st.lock { |s| s.closed }
if xs.any? { |x| x > 1 } { puts 1 }
while q.lock { |s| s.n } > 0 { step() }
if n = find("ab") { puts n }

---

(source_file
  (expression_statement
    (assignment_expression
      (identifier)
      (binary_expression
        (call_expression
          (member_expression
            (identifier)
            (identifier))
          (block
            (block_parameters
              (identifier))
            (expression_statement
              (member_expression
                (identifier)
                (identifier)))))
        (identifier))))
  (expression_statement
    (assignment_expression
      (identifier)
      (unary_expression
        (call_expression
          (member_expression
            (identifier)
            (identifier))
          (block
            (block_parameters
              (identifier))
            (expression_statement
              (member_expression
                (identifier)
                (identifier))))))))
  (expression_statement
    (if_expression
      (call_expression
        (member_expression
          (identifier)
          (identifier))
        (block
          (block_parameters
            (identifier))
          (expression_statement
            (binary_expression
              (identifier)
              (integer)))))
      (block
        (expression_statement
          (command_call
            (identifier)
            (command_argument_list
              (integer)))))))
  (while_statement
    (binary_expression
      (call_expression
        (member_expression
          (identifier)
          (identifier))
        (block
          (block_parameters
            (identifier))
          (expression_statement
            (member_expression
              (identifier)
              (identifier)))))
      (integer))
    (block
      (expression_statement
        (call_expression
          (identifier)
          (argument_list)))))
  (expression_statement
    (if_expression
      (assignment_expression
        (identifier)
        (call_expression
          (identifier)
          (argument_list
            (string
              (string_content)))))
      (block
        (expression_statement
          (command_call
            (identifier)
            (command_argument_list
              (identifier))))))))

==================
Keywords as method and field names
==================

t.fail
x.spawn
e.next
s.select { it > 1 }
r.if

---

(source_file
  (expression_statement
    (member_expression
      (identifier)
      (identifier)))
  (expression_statement
    (member_expression
      (identifier)
      (identifier)))
  (expression_statement
    (member_expression
      (identifier)
      (identifier)))
  (expression_statement
    (call_expression
      (member_expression
        (identifier)
        (identifier))
      (block
        (expression_statement
          (binary_expression
            (identifier)
            (integer))))))
  (expression_statement
    (member_expression
      (identifier)
      (identifier))))

==================
Contextual keywords as names
==================

def f(a: Int) {
  select(a, b, 1)
  using = 2
}
pub = 1
error = pub + 1
import = error

---

(source_file
  (function_definition
    (identifier)
    (parameters
      (parameter
        (identifier)
        (type_identifier)))
    (block
      (expression_statement
        (call_expression
          (identifier)
          (argument_list
            (identifier)
            (identifier)
            (integer))))
      (expression_statement
        (assignment_expression
          (identifier)
          (integer)))))
  (expression_statement
    (assignment_expression
      (identifier)
      (integer)))
  (expression_statement
    (assignment_expression
      (identifier)
      (binary_expression
        (identifier)
        (integer))))
  (expression_statement
    (assignment_expression
      (identifier)
      (identifier))))

==================
Literals
==================

a = [1, 2.5, 2i, 2.5i, 1e3, 0xff, 0b1010, 0o17, 1_000]
b = [:sym, :even?, :+, true, false, nil, none]
c = {"a" => 1, b: 2}
d = (1, "x")
e = [0; 16]
r = 'raw \n'

---

(source_file
  (expression_statement
    (assignment_expression
      (identifier)
      (array_literal
        (integer)
        (float)
        (imaginary)
        (imaginary)
        (float)
        (integer)
        (integer)
        (integer)
        (integer))))
  (expression_statement
    (assignment_expression
      (identifier)
      (array_literal
        (symbol)
        (symbol)
        (symbol)
        (boolean)
        (boolean)
        (nil)
        (none))))
  (expression_statement
    (assignment_expression
      (identifier)
      (map_literal
        (pair
          (string
            (string_content))
          (integer))
        (pair
          (identifier)
          (integer)))))
  (expression_statement
    (assignment_expression
      (identifier)
      (tuple_expression
        (integer)
        (string
          (string_content)))))
  (expression_statement
    (assignment_expression
      (identifier)
      (array_repeat
        (integer)
        (integer))))
  (expression_statement
    (assignment_expression
      (identifier)
      (raw_string))))

==================
Ranges and slices
==================

s[1...3]
s[2..]
s[..n]
r = 1..9

---

(source_file
  (expression_statement
    (index_expression
      (identifier)
      (range_expression
        (integer)
        (integer))))
  (expression_statement
    (index_expression
      (identifier)
      (range_expression
        (integer))))
  (expression_statement
    (index_expression
      (identifier)
      (range_expression
        (identifier))))
  (expression_statement
    (assignment_expression
      (identifier)
      (range_expression
        (integer)
        (integer)))))

==================
Lambdas and tasks
==================

add = ->(a: Int, b: Int) -> Int { a + b }
k = -> { 42 }
t = spawn { work() }
u = spawn f(x)
r = t.~wait

---

(source_file
  (expression_statement
    (assignment_expression
      (identifier)
      (lambda_expression
        (parameters
          (parameter
            (identifier)
            (type_identifier))
          (parameter
            (identifier)
            (type_identifier)))
        (type_identifier)
        (block
          (expression_statement
            (binary_expression
              (identifier)
              (identifier)))))))
  (expression_statement
    (assignment_expression
      (identifier)
      (lambda_expression
        (block
          (expression_statement
            (integer))))))
  (expression_statement
    (assignment_expression
      (identifier)
      (spawn_expression
        (block
          (expression_statement
            (call_expression
              (identifier)
              (argument_list)))))))
  (expression_statement
    (assignment_expression
      (identifier)
      (spawn_expression
        (call_expression
          (identifier)
          (argument_list
            (identifier))))))
  (expression_statement
    (assignment_expression
      (identifier)
      (member_expression
        (identifier)
        (identifier)))))

==================
Case and select
==================

w = case x { 0 => "zero"; 1..9 => "small"; _ => "big" }
case e {
  Bad(p) | Worse(p) => puts p
  ParseErr.Empty => puts "empty"
  pk.ParseErr.Other(_, b) => puts b
  io.Reader(r) => puts "reader"
  strconv.ERR_RANGE => puts "range"
}
case {
  x > 1 => 1
  _ => 2
}
select {
  when v = ch.recv => puts v
  when ch << 1 => { done = true }
  else => nil
}

---

(source_file
  (expression_statement
    (assignment_expression
      (identifier)
      (case_expression
        (identifier)
        (case_arm
          (integer)
          (string
            (string_content)))
        (case_arm
          (range_expression
            (integer)
            (integer))
          (string
            (string_content)))
        (case_arm
          (identifier)
          (string
            (string_content))))))
  (expression_statement
    (case_expression
      (identifier)
      (case_arm
        (variant_pattern
          (constant)
          (pattern_bindings
            (identifier)))
        (variant_pattern
          (constant)
          (pattern_bindings
            (identifier)))
        (command_call
          (identifier)
          (command_argument_list
            (identifier))))
      (case_arm
        (variant_pattern
          (constant)
          (constant))
        (command_call
          (identifier)
          (command_argument_list
            (string
              (string_content)))))
      (case_arm
        (variant_pattern
          (identifier)
          (constant)
          (constant)
          (pattern_bindings
            (identifier)
            (identifier)))
        (command_call
          (identifier)
          (command_argument_list
            (identifier))))
      (case_arm
        (variant_pattern
          (identifier)
          (constant)
          (pattern_bindings
            (identifier)))
        (command_call
          (identifier)
          (command_argument_list
            (string
              (string_content)))))
      (case_arm
        (member_expression
          (identifier)
          (constant))
        (command_call
          (identifier)
          (command_argument_list
            (string
              (string_content)))))))
  (expression_statement
    (case_expression
      (case_arm
        (binary_expression
          (identifier)
          (integer))
        (integer))
      (case_arm
        (identifier)
        (integer))))
  (expression_statement
    (select_expression
      (select_arm
        (assignment_expression
          (identifier)
          (member_expression
            (identifier)
            (identifier)))
        (command_call
          (identifier)
          (command_argument_list
            (identifier))))
      (select_arm
        (binary_expression
          (identifier)
          (integer))
        (block
          (expression_statement
            (assignment_expression
              (identifier)
              (boolean)))))
      (select_arm
        (nil)))))

==================
Ternary and precedence
==================

z = c ? 1 : 2
v = !a == b
p = -2 ** 2
q = a << b + 1
u = a || b && c

---

(source_file
  (expression_statement
    (assignment_expression
      (identifier)
      (ternary_expression
        (identifier)
        (integer)
        (integer))))
  (expression_statement
    (assignment_expression
      (identifier)
      (unary_expression
        (binary_expression
          (identifier)
          (identifier)))))
  (expression_statement
    (assignment_expression
      (identifier)
      (unary_expression
        (binary_expression
          (integer)
          (integer)))))
  (expression_statement
    (assignment_expression
      (identifier)
      (binary_expression
        (identifier)
        (binary_expression
          (identifier)
          (integer)))))
  (expression_statement
    (assignment_expression
      (identifier)
      (binary_expression
        (identifier)
        (binary_expression
          (identifier)
          (identifier))))))
