tree-sitter-alexandrite/test/corpus/statements.txt
==================
Statement modifiers with blocks in the condition
==================

return i if set.any? { it == r }
break if n == 0
next unless ok
puts x if xs.size > 0

---

(source_file
  (if_modifier
    (return_statement
      (identifier))
    (call_expression
      (member_expression
        (identifier)
        (identifier))
      (block
        (expression_statement
          (binary_expression
            (identifier)
            (identifier))))))
  (if_modifier
    (break_statement)
    (binary_expression
      (identifier)
      (integer)))
  (unless_modifier
    (next_statement)
    (identifier))
  (if_modifier
    (expression_statement
      (command_call
        (identifier)
        (command_argument_list
          (identifier))))
    (binary_expression
      (member_expression
        (identifier)
        (identifier))
      (integer))))

==================
Jumps
==================

def f(e: Error) -> ~Int {
  fail(e)
  fail ParseErr.Bad(pos: 0) if e.ok?
  return
  return 1, 2
  break
}

---

(source_file
  (function_definition
    (identifier)
    (parameters
      (parameter
        (identifier)
        (type_identifier)))
    (return_type
      (result_type
        (type_identifier)))
    (block
      (fail_statement
        (parenthesized_expression
          (identifier)))
      (if_modifier
        (fail_statement
          (call_expression
            (member_expression
              (constant)
              (constant))
            (argument_list
              (keyword_argument
                (identifier)
                (integer)))))
        (member_expression
          (identifier)
          (identifier)))
      (return_statement)
      (return_statement
        (integer)
        (integer))
      (break_statement))))

==================
Assignments
==================

a, b = b, a
xs[i], xs[j] = xs[j], xs[i]
x: Int = 5
total += n
y =
  x + 1
z = x +% 1

---

(source_file
  (multi_assignment_statement
    (identifier)
    (identifier)
    (identifier)
    (identifier))
  (multi_assignment_statement
    (index_expression
      (identifier)
      (identifier))
    (index_expression
      (identifier)
      (identifier))
    (index_expression
      (identifier)
      (identifier))
    (index_expression
      (identifier)
      (identifier)))
  (declaration_statement
    (identifier)
    (type_identifier)
    (integer))
  (expression_statement
    (assignment_expression
      (identifier)
      (identifier)))
  (expression_statement
    (assignment_expression
      (identifier)
      (binary_expression
        (identifier)
        (integer))))
  (expression_statement
    (assignment_expression
      (identifier)
      (binary_expression
        (identifier)
        (integer)))))

==================
Loops and defer
==================

for i in 0...n { }
for k, v in pairs { puts k }
while c { c = false }
loop { break if done }
defer { cleanup() }
defer f.close
using Km
using geom.Metric

---

(source_file
  (for_statement
    (identifier)
    (range_expression
      (integer)
      (identifier))
    (block))
  (for_statement
    (identifier)
    (identifier)
    (identifier)
    (block
      (expression_statement
        (command_call
          (identifier)
          (command_argument_list
            (identifier))))))
  (while_statement
    (identifier)
    (block
      (expression_statement
        (assignment_expression
          (identifier)
          (boolean)))))
  (expression_statement
    (call_expression
      (identifier)
      (block
        (if_modifier
          (break_statement)
          (identifier)))))
  (defer_statement
    (block
      (expression_statement
        (call_expression
          (identifier)
          (argument_list)))))
  (defer_statement
    (member_expression
      (identifier)
      (identifier)))
  (using_statement
    (type_identifier))
  (using_statement
    (scoped_type_identifier
      (identifier)
      (type_identifier))))

==================
Newlines: continuation lines
==================

big = xs
  # a comment between the steps
  .map { it * 10 }

  ?.first
s = a +
  b
if c {
  1
}
else {
  2
}
x = 1; y = 2

---

(source_file
  (expression_statement
    (assignment_expression
      (identifier)
      (member_expression
        (call_expression
          (member_expression
            (identifier)
            (comment)
            (identifier))
          (block
            (expression_statement
              (binary_expression
                (identifier)
                (integer)))))
        (identifier))))
  (expression_statement
    (assignment_expression
      (identifier)
      (binary_expression
        (identifier)
        (identifier))))
  (expression_statement
    (if_expression
      (identifier)
      (block
        (expression_statement
          (integer)))
      (else_clause
        (block
          (expression_statement
            (integer))))))
  (expression_statement
    (assignment_expression
      (identifier)
      (integer)))
  (expression_statement
    (assignment_expression
      (identifier)
      (integer))))

==================
Separate statements on separate lines
==================

foo
(bar)
puts x
-1

---

(source_file
  (expression_statement
    (identifier))
  (expression_statement
    (parenthesized_expression
      (identifier)))
  (expression_statement
    (command_call
      (identifier)
      (command_argument_list
        (identifier))))
  (expression_statement
    (unary_expression
      (integer))))
